[package]
name = "lib-ngrok"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Ngrok downloader and runner."

[dependencies]
reqwest = { version = "0.11.11", optional = true }
bytes = { version = "1.0", optional = true }
thiserror = "1.0.32"
flate2 = { version = "1.0.24", optional = true }
tar = { version = "0.4.38", optional = true }
zip = { version = "0.6.2", optional = true }
tempfile = { version = "3.3.0", optional = true }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0.61"
dialoguer = "0.5.1"

[features]
default = ["download"]
download = ["dep:reqwest", "dep:bytes", "dep:flate2", "dep:tar", "dep:zip", "dep:tempfile"]